style.css
body {
    margin: 0;
}

.mainBody {
    margin: 0 auto;
    height: 95vh;
    width: 900px;
    background-color: rgb(77, 78, 78);
    padding: 20px;
}

.displayscreen {
    height: 25%;
    background-color: olive;
    border: 8px solid rgb(102, 39, 39);

    padding: 10px;
    margin-bottom: 20px;

    font-family: 'Digital Numbers', sans-serif;
    font-size: 100px;

    display: flex;
    align-items: center;
    justify-content: end;
}

.keypad {
    padding: 15px;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;

    background-color: gray;
    height: 65%;
}

.sm-btns {
    height: 100px;
    width: 200px;
    font-size: 60px;
    border: none;
    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.7);
    transition: all 0.3s ease;
}

.sm-btns:active {
    font-size: 65px;
    height: 90px;
    width: 190px;
}

.op-btns {
    color: green;
}

.equal-btn {
    background-color: green;
    color: white;
}

